<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASUS Download Master Client</string>
    
    <!-- Basics -->
    <string name="basic_yes">Yes</string>
    <string name="basic_no">No</string>
    <string name="basic_cancel">Cancel</string>
    
    <!-- Preferences screen -->
    <string name="preference_category_server">Web server preferences</string>
    <string name="preference_server_address">Web server address</string>
	<string name="preference_server_port">Web server port</string>
	<string name="preference_path_postfix">Enable path postfix</string>
	<string name="preference_path_postfix_summary">Set this tick on for Download Master 3.1.0.68 or newer</string>
	
	<string name="preference_category_auth">Authorization preferences</string>
    <string name="preference_login">Login</string>
    <string name="preference_password">Password</string>
    <string name="preference_password_summary">Password to Download Master web server</string>
    
    <string name="preference_category_autorefresh">Autorefresh preferences</string>
    <string name="preference_autorefresh_enabled">Enable autorefresh</string>
    <string name="preference_autorefresh_enabled_summary">Set this on to refresh your downloads list automatically</string>
    <string name="preference_autorefresh_interval">Autorefresh interval</string>
    
    <string name="preference_category_display">Display preferences</string>

    <string name="preference_display_mode">Display mode</string>
    <string name="preference_display_mode_collapsed">Compact</string>
    <string name="preference_display_mode_expanded">Expanded</string>
    <string name="preference_display_mode_smart">Smart</string>
    
    <string name="preference_language">App language</string>
    <string name="preference_language_based_on_device_locale">Automatically</string>
    
    <string name="preference_category_other">Others</string>   
    <string name="preference_donate">Donate</string>
    <string name="preference_donate_summary">Say thank you to the developer via Google Play</string>
    
    <!-- Menus and commands -->
    <string name="menu_item_refresh_list">Refresh list</string>
    <string name="menu_group_manage_downloads">Manage downloads</string>
    <string name="menu_item_add_torrent">Add torrent/nzb file</string>
    <string name="menu_item_add_link">Add link</string>
    <string name="menu_item_pause_all">Suspend all</string>
    <string name="menu_item_resume_all">Resume all</string>
    <string name="menu_item_delete_completed">Remove completed</string>
    <string name="menu_item_kill_exit">Stop service and exit</string>
    <string name="menu_item_preferences">Preferences</string>
    
    <string name="context_menu_item_pause">Suspend this</string>
    <string name="context_menu_item_resume">Resume this</string>
    <string name="context_menu_item_delete">Stop and remove this</string>
    
    <!-- Commands and popups -->
    <string name="command_info_part_download">Torrent</string>
    <string name="command_info_part_pause">is queued for pause</string>
    <string name="command_info_part_resume">is queued for resume</string>
    <string name="command_info_part_delete">is queued for delete</string>
    <string name="confirmation_message_delete">You are going to delete this torrent. All downloaded data will be saved. Are you sure?</string>
    <string name="command_info_cannot_connect">Cannot connect to Download Master service</string>
    <string name="command_info_pause_all">All downloads are queued for pause.</string>
    <string name="command_info_resume_all">All downloads are queued for resume.</string>
    <string name="command_info_delete_finished">All finished downloads are queued for delete.</string>
    <string name="confirmation_message_delete_finished">Do you really want to clear all finished downloads?</string>
    
    <string name="confirmation_message_download_magnet_link" formatted="false">Do you really want to start download %s magnet link?</string>
    <string name="command_info_download_magnet_link" formatted="false">Magnet link %s is queued for download.</string>
    <string name="confirmation_message_download_torrent" formatted="false">Do you really want to start download "%s" torrent?</string>
    <string name="command_info_download_torrent" formatted="false">Torrent "%s" is queued for download.</string>
    
    <!-- Download item UI strings -->
    <string name="item_list_no_downloads">No active downloads detected</string>
    <string name="download_item_status" formatted="false">Status: %s, progress: %d%% of %s</string>
    <string name="download_item_expanded_status">Status: </string>
    <string name="download_item_expanded_lifetime">Torrent lifetime: </string>
    <string name="download_item_expanded_upload_speed">Upload speed: </string>
    <string name="download_item_expanded_download_speed">Download speed: </string>
    
    <!-- Notification strings -->
    <string name="notification_download_completed_title">Download completed</string>
    <string name="notification_download_completed_text" formatted="false">"%s" successfully downloaded.</string>
    
    <!-- Add link alert -->
    <string name="add_torrent_alert_title">Add torrent file</string>
    <string name="add_link_alert_title">Add direct link</string>
    <string name="add_link_alert_message">Download Master supports http, ftp, Magnet, ed2k, torrent, or nzb links</string>
    <string name="add_link_alert_hint">Paste your link here...</string> 
    
    <!-- Donation answer texts -->
    <string name="donation_succeed">Donation successfully sent. Thank you!</string>
    <string name="donation_failed">Donation failed or cancelled...</string>
    
    <!-- Task Status -->
    <string name="task_status_trans_initialing">Initialing</string>
	<string name="task_status_trans_downloading">Downloading</string>
	<string name="task_status_trans_paused">Paused</string>
	<string name="task_status_trans_finished">Finished</string>
	<string name="task_status_trans_seeding">Seeding</string>
	<string name="task_status_trans_stop">Stop</string>
	<string name="task_status_trans_error">Error</string>
    
</resources>